--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "microsoft-cognitiveservices-speech-sdk": "^1.15.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "use-sound": "^2.0.1",
